마크업 수정 완료

--- a/index.html
+++ b/index.html
@@ -60,29 +60,40 @@
                     <span class="subscribers">1M subscribers</span>
                 </div>
             </div>
-            <div class="subscribe"></div>
+            <button class="subscribe">subscribe</button>
         </div>
     </section>
     <section class="Upnext">
         <span class="title4">Up next</span>
         <ul>
             <li class="item">
+                <img src="tiger-g08c78e8d0_640.jpg" alt="">
+                <!-- <div class="info">프론트엔드 강의 프론트 개발자</div>
+                <div class="views">82K views</div> -->
+                <div class="info">
+                    <span class="title">프론트엔드 강의 프론트 개발자</span>
+                    <span class="name">드림코딩 by 엘리</span>
+                    <span class="views">82K views</span>
+                </div>
+                <button class="moreBtn"><i class="fas fa-caret-down"></i></button> <!-- 주석 처리 한거랑 비교하기 주석처리 한게 내가 안보고 스스로 했었던것들 -->
+            </li>
+            <li class="item">
                 <img src="tiger-g082a6abf5_640.jpg" alt="">
-                <div class="info">프론트엔드 강의 프론트 개발자</div>
-                <div class="views">82K views</div>
-                <button><i class="fas fa-caret-down"></i></button>
+                <div class="info">
+                    <span class="title">프론트엔드 쉽다고 무시하면 안돼요</span>
+                    <span class="name">드림코딩 by 엘리</span>
+                    <span class="views">82K views</span>
+                </div>
+                <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
             </li>
             <li class="item">
                 <img src="tiger-g55222df2c_640.jpg" alt="">
-                <div class="info">프론트엔드 쉽다고 무시하면 안돼요</div>
-                <div class="views">82K views</div>
-                <button><i class="fas fa-caret-down"></i></button>
-            </li>
-            <li class="item">
-                <img src="tiger-g082a6abf5_640.jpg" alt="">
-                <div class="info">웹 포트폴리오 만들기 전에 보세요</div>
-                <div class="views">82K views</div>
-                <button><i class="fas fa-caret-down"></i></button>
+                <div class="info">
+                    <span class="title">웹 포트폴리오 만들기 전에 보세요</span>
+                    <span class="name">드림코딩 by 엘리</span>
+                    <span class="views">82K views</span>
+                </div>
+                <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
             </li>
         </ul>
     </section>
