--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <span class="title4">Up next</span>
         <ul>
             <li class="item">
-                <img src="tiger-g08c78e8d0_640.jpg" alt="">
+                <div class="img"><img src="tiger-g08c78e8d0_640.jpg" alt=""></div>
                 <!-- <div class="info">프론트엔드 강의 프론트 개발자</div>
                 <div class="views">82K views</div> -->
                 <div class="info">
@@ -76,7 +76,7 @@
                 <button class="moreBtn"><i class="fas fa-caret-down"></i></button> <!-- 주석 처리 한거랑 비교하기 주석처리 한게 내가 안보고 스스로 했었던것들 -->
             </li>
             <li class="item">
-                <img src="tiger-g082a6abf5_640.jpg" alt="">
+                <div class="img"><img src="tiger-g082a6abf5_640.jpg" alt=""></div>
                 <div class="info">
                     <span class="title">프론트엔드 쉽다고 무시하면 안돼요</span>
                     <span class="name">드림코딩 by 엘리</span>
@@ -85,7 +85,7 @@
                 <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
             </li>
             <li class="item">
-                <img src="tiger-g55222df2c_640.jpg" alt="">
+                <div class="img"><img src="tiger-g55222df2c_640.jpg" alt=""></div>
                 <div class="info">
                     <span class="title">웹 포트폴리오 만들기 전에 보세요</span>
                     <span class="name">드림코딩 by 엘리</span>
