--- a/index.html
+++ b/index.html
@@ -24,76 +24,79 @@
         <video controls src="Tiger - 81118.mp4"></video>
     </section>
 
-    <section class="info">
-        <div class="title2">
-            <ul class="hashtag">
-                <li>#Dreamcoding</li>
-                <li>#coders</li>
-                <li>#Ellie</li>
+    
+    <div class="infoandupnext">
+        <section class="info">
+            <div class="title2">
+                <ul class="hashtag">
+                    <li>#Dreamcoding</li>
+                    <li>#coders</li>
+                    <li>#Ellie</li>
+                </ul>
+                <div class="titleandbutton">
+                    <span class="title3">유튜브 모바일 웹사이트 따라 만들기 | 프론트엔드 개발자 입문편</span>
+                    <button class="moreBtn"><i class="fas fa-caret-down"></i></button> <!-- 버튼에 클래스 명 따로 안정했었음-->
+                </div>
+                    <span class="view">1M views 1 months ago</span>
+            </div>
+            <ul class="mark">
+                <li><button><i class="fas fa-thumbs-up"></i><span>1K</span></button></li>
+                <li><button><i class="fas fa-thumbs-down"></i><span>0</span></button></li>
+                <li><button><i class="fas fa-share"></i><span>Share</span></button></li>
+                <li><button><i class="fas fa-plus"></i><span>Save</span></button></li>
+                <li><button><i class="fas fa-flag"></i><span>Report</span></button></li> <!-- i 태그 바깥쪽에 버튼 태그를 안해놨었음-->
             </ul>
-            <div class="titleandbutton">
-                <span class="title3">유튜브 모바일 웹사이트 따라 만들기 | 프론트엔드 개발자 입문편</span>
-                <button class="moreBtn"><i class="fas fa-caret-down"></i></button> <!-- 버튼에 클래스 명 따로 안정했었음-->
+            <div class="channel">
+                <!-- <img src="tiger-g08c78e8d0_640.jpg" alt="">
+                <div class="info">
+                    <div class="name">드림코딩 엘리</div>
+                    <div class="subscriber">1M subscribers</div>
+                </div>
+                <div class="sub">SUBSCRIBE</div> -->
+                <div class="metadata">
+                    <img src="tiger-g08c78e8d0_640.jpg" alt="">
+                    <div class="info">
+                        <span class="name">드림코딩 엘리</span>
+                        <span class="subscribers">1M subscribers</span>
+                    </div>
+                </div>
+                <button class="subscribe">subscribe</button>
             </div>
-                <span class="view">1M views 1 months ago</span>
-        </div>
-        <ul class="mark">
-            <li><button><i class="fas fa-thumbs-up"></i><span>1K</span></button></li>
-            <li><button><i class="fas fa-thumbs-down"></i><span>0</span></button></li>
-            <li><button><i class="fas fa-share"></i><span>Share</span></button></li>
-            <li><button><i class="fas fa-plus"></i><span>Save</span></button></li>
-            <li><button><i class="fas fa-flag"></i><span>Report</span></button></li> <!-- i 태그 바깥쪽에 버튼 태그를 안해놨었음-->
-        </ul>
-        <div class="channel">
-            <!-- <img src="tiger-g08c78e8d0_640.jpg" alt="">
-            <div class="info">
-                <div class="name">드림코딩 엘리</div>
-                <div class="subscriber">1M subscribers</div>
-            </div>
-            <div class="sub">SUBSCRIBE</div> -->
-            <div class="metadata">
-                <img src="tiger-g08c78e8d0_640.jpg" alt="">
-                <div class="info">
-                    <span class="name">드림코딩 엘리</span>
-                    <span class="subscribers">1M subscribers</span>
-                </div>
-            </div>
-            <button class="subscribe">subscribe</button>
-        </div>
-    </section>
-    <section class="Upnext">
-        <span class="title4">Up next</span>
-        <ul>
-            <li class="item">
-                <div class="img"><img src="tiger-g08c78e8d0_640.jpg" alt=""></div>
-                <!-- <div class="info">프론트엔드 강의 프론트 개발자</div>
-                <div class="views">82K views</div> -->
-                <div class="info">
-                    <span class="title">프론트엔드 강의 프론트 개발자</span>
-                    <span class="name">드림코딩 by 엘리</span>
-                    <span class="views">82K views</span>
-                </div>
-                <button class="moreBtn"><i class="fas fa-caret-down"></i></button> <!-- 주석 처리 한거랑 비교하기 주석처리 한게 내가 안보고 스스로 했었던것들 -->
-            </li>
-            <li class="item">
-                <div class="img"><img src="tiger-g082a6abf5_640.jpg" alt=""></div>
-                <div class="info">
-                    <span class="title">프론트엔드 쉽다고 무시하면 안돼요</span>
-                    <span class="name">드림코딩 by 엘리</span>
-                    <span class="views">82K views</span>
-                </div>
-                <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
-            </li>
-            <li class="item">
-                <div class="img"><img src="tiger-g55222df2c_640.jpg" alt=""></div>
-                <div class="info">
-                    <span class="title">웹 포트폴리오 만들기 전에 보세요</span>
-                    <span class="name">드림코딩 by 엘리</span>
-                    <span class="views">82K views</span>
-                </div>
-                <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
-            </li>
-        </ul>
-    </section>
+        </section>
+        <section class="Upnext">
+            <span class="title4">Up next</span>
+            <ul>
+                <li class="item">
+                    <div class="img"><img src="tiger-g08c78e8d0_640.jpg" alt=""></div>
+                    <!-- <div class="info">프론트엔드 강의 프론트 개발자</div>
+                    <div class="views">82K views</div> -->
+                    <div class="info">
+                        <span class="title">프론트엔드 강의 프론트 개발자</span>
+                        <span class="name">드림코딩 by 엘리</span>
+                        <span class="views">82K views</span>
+                    </div>
+                    <button class="moreBtn"><i class="fas fa-caret-down"></i></button> <!-- 주석 처리 한거랑 비교하기 주석처리 한게 내가 안보고 스스로 했었던것들 -->
+                </li>
+                <li class="item">
+                    <div class="img"><img src="tiger-g082a6abf5_640.jpg" alt=""></div>
+                    <div class="info">
+                        <span class="title">프론트엔드 쉽다고 무시하면 안돼요</span>
+                        <span class="name">드림코딩 by 엘리</span>
+                        <span class="views">82K views</span>
+                    </div>
+                    <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
+                </li>
+                <li class="item">
+                    <div class="img"><img src="tiger-g55222df2c_640.jpg" alt=""></div>
+                    <div class="info">
+                        <span class="title">웹 포트폴리오 만들기 전에 보세요</span>
+                        <span class="name">드림코딩 by 엘리</span>
+                        <span class="views">82K views</span>
+                    </div>
+                    <button class="moreBtn"><i class="fas fa-caret-down"></i></button>
+                </li>
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
